Update interim report / report (fix citation)

--- a/design-docs/Interim Report & Risk Assessment.tex
+++ b/design-docs/Interim Report & Risk Assessment.tex
@@ -67,7 +67,7 @@ Furthermore, csar aims to be flexible code-wise. Most of its API will be publicl
 \subsection{Pre-requisite Knowledge}
 ``Code refactoring is the process of restructuring existing computer code—changing the factoring—without changing its external behaviour. Refactoring improves non-functional attributes of the software." \autocite{wikipediacoderefactoring}
 
-``Semantics-based search seeks to improve search accuracy by understanding the searcher's intent and the contextual meaning of terms as they appear in the searchable dataspace, whether on the Web or within a closed system, to generate more relevant results." \autocite{wikipediacompilercompiler} Henceforth, this is what is meant by `code search' or `search'.
+``Semantics-based search seeks to improve search accuracy by understanding the searcher's intent and the contextual meaning of terms as they appear in the searchable dataspace, whether on the Web or within a closed system, to generate more relevant results." \autocite{wikipediasemanticsearch} Henceforth, this is what is meant by `code search' or `search'.
 
 Searching increases developer productivity by enabling reuse, and it is important to address properly because it accounts for a significant portion of a developer's activity. \autocite{reiss2009semantics,stolee2014solving}
 
