--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -53,7 +53,7 @@
 \begin{abstract}
     There is currently a lack of semantics-based code search tools and furthermore no semantics-based, integrated code search and refactor tool.
     This paper will detail the creation of the csar (code search and refactor) tool, which aims to be versatile, query-driven, semantics-based and language-agnostic.
-    It will cover the pre-requisite knowledge to understand this paper, requirements (general, selected and backlogged), design (with a runnning example), implementation and background material.
+    It will cover the pre-requisite knowledge to understand this paper, requirements (general, selected and backlogged), design (with a running example), implementation and background material.
 \end{abstract}
 \newpage
 
