Update report (non-functional requirements)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -71,3 +71,10 @@
   date={2017},
   url={https://en.wikipedia.org/wiki/Semantic\_search}
 }
+
+@online{javasysreqs,
+  author={{Oracle Corporation}},
+  title={What are the system requirements for Java? },
+  date={2017},
+  url={https://java.com/en/download/help/sysreq.xml}
+}
