--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -30,6 +30,11 @@
 \PassOptionsToPackage{hyphens}{url}
 \usepackage{hyperref}
 
+% Custom url line breaking
+\renewcommand{\UrlBreaks}{\do\:\do\.\do\/\do\_\do\-\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j\do\k\do\l
+\do\m\do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v\do\w\do\x\do\y\do\z\do\A\do\B\do\C\do\D\do\E\do\F
+\do\G\do\H\do\I\do\J\do\K\do\L\do\M\do\N\do\O\do\P\do\Q\do\R\do\S\do\T\do\U\do\V\do\W\do\X\do\Y\do\Z}
+
 % Document
 \begin{document}
 
